# playAIdes

./: .dockerignore  .env.example  .gitignore  CONTINUITY.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.test  Dockerfile.test-js  LICENSE  Makefile  README.md  design_plan.md  docker-compose.dev.yml  docker-compose.harness.yml  docker-compose.live.yml  docker-compose.test.yml  docker-compose.yml  ha_client.py  incarnation_client.py  incarnation_server.py  main.py  match_keywords.py  model_interfaces.py  ollama_post.sh  persona.py  persona_db.py  playAIdes.py  pyproject.toml
backend/: __init__.py
backend/api/: conversation.py  deps.py  integrations.py  personas.py
backend/clients/: tts.py
backend/ports/: display.py
backend/services/: conversation.py  persona.py
backend/stores/: config_store.py  history.py  launch_targets.py  personas.py  secrets_store.py
data/: control.html  mic.html
docs/: USER_GUIDE.md  VOICEBOX_HTTP_API.md  avatar-creator-research.md  firetv-kiosk-browsers.md  frontend-architecture.md  ha-integration.md  hardware-voice-options.md
ha/: README.md  silver_launch.yaml  silver_launch_dashboard.yaml
incarnation/: .gitignore  console.html  creator.html  dashboard.html  design-preview.html  index.html  package-lock.json  package.json  persona_creator.html  test_incarnation.py  vite.config.js  vitest.config.js
incarnation/src/: animationManager.js  apiClient.js  apiClient.test.js  audioCapture.js  audioCapture.test.js  cameraDirector.js  cameraDirector.test.js  chatPanel.js  connectionManager.js  creator.js  creatorScene.js  dashboard.js  debugPanel.js  expressionManager.js  incarnation.js  lipSyncManager.js  loadMixamoAnimation.js  main.js  mixamoVRMRigMap.js  modelLoader.js  personaCreator.js  personasRegistry.js  personasRegistry.test.js  pipOverlay.js  pipOverlay.test.js  scene.js  sceneBackgrounds.js  sceneBackgrounds.test.js  stageLayout.js  stageLayout.test.js  sttClient.js  sttClient.test.js  transcriptMatcher.js  transcriptMatcher.test.js  transcriptModel.js  transcriptModel.test.js  viewer.js  viewerConfig.js  viewerConfig.test.js  viewerOverlays.js  (+5 more)
incarnation/styles/: console.css  creator.css  main.css  theme-fate.css  theme-manga.css  theme-p5-extra.css  tokens.css  viewer.css
personas/: handy.json
personas/silver/: persona.json
skill_packs/: demo.json
skills/: __init__.py  base.py  declarative.py  loader.py  pip.py  provider.py  registry.py  router.py
tests/: conftest.py
tests/integration/: conftest.py  test_conversation_rest.py  test_conversation_ws.py  test_event_endpoint.py  test_ha_routing.py  test_ha_trigger_endpoints.py  test_incarnation_server_http.py  test_personas_rest.py  (+10 more)
voice_generation/: ref_gitignore  test_voice.py  voice_api.py
(+97 files in other folders)
