[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playaides"
version = "0.1.0"
description = "Interactive AI personas with 3D avatars, TTS voices, and chat."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "See LICENSE" }
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "websockets>=12",
    "python-multipart>=0.0.9",   # required by FastAPI file-upload routes (persona model/animation upload)
    # Shared TTS client + wire models — the unified voicebox service (replaces the
    # embedded voice_generation/ copy). Private repo: the backend image installs it
    # via buildkit ssh (see Dockerfile.backend + the `ssh:` build option in compose).
    "voicebox @ git+ssh://git@github.com/jkbell-git/voicebox.git@main",
    # Audio deps (sounddevice, numpy, playsound3) are intentionally NOT listed here —
    # they require native portaudio/ALSA and are only needed for live speaker playback.
    # Install them in the app container if you want streaming TTS playback.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "responses>=0.25",        # requests mocking
    "respx>=0.21",            # httpx mocking
    "watchfiles>=0.21",       # backend hot-reload in docker compose
]

[tool.setuptools]
# This is a flat-layout project; list the top-level modules explicitly so setuptools
# doesn't try to pick up voice_generation/voice_server (which is a separate Docker service).
py-modules = ["playAIdes", "persona", "model_interfaces", "incarnation_server", "incarnation_client", "main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_generation*", "backend*"]
exclude = ["voice_generation.voice_server*", "tests*", "incarnation*", "personas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: FastAPI TestClient tests (no external services)",
    "live: tests that hit a real Ollama / TTS container",
    "slow: slow tests (seconds+)",
]
addopts = "-ra --strict-markers --cov=. --cov-report=term-missing --cov-report=xml:/out/coverage.xml"
cache_dir = "/out/.pytest_cache"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*",
]

[tool.coverage.run]
branch = true
data_file = "/out/.coverage"
omit = [
    "tests/*",
    "voice_generation/voice_server/*",
    "incarnation/*",
    "main.py",
    "incarnation_client.py",
    "voice_generation/test_voice.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
